--- a/api-server/package.json
+++ b/api-server/package.json
@@ -10,6 +10,7 @@
     "license": "ISC",
     "dependencies": {
         "@aws-sdk/client-ecs": "^3.577.0",
+        "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "ioredis": "^5.4.1",
         "random-word-slugs": "^0.1.7",
