initialise kafka : rem redis

--- a/api-server/package.json
+++ b/api-server/package.json
@@ -10,10 +10,19 @@
     "license": "ISC",
     "dependencies": {
         "@aws-sdk/client-ecs": "^3.577.0",
+        "@clickhouse/client": "^1.0.2",
+        "@prisma/client": "^5.14.0",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
-        "ioredis": "^5.4.1",
+        "kafkajs": "^2.2.4",
         "random-word-slugs": "^0.1.7",
-        "socket.io": "^4.7.5"
+        "socket.io": "^4.7.5",
+        "zod": "^3.23.8"
+    },
+    "devDependencies": {
+        "@types/node": "^20.12.12",
+        "prisma": "^5.14.0",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.4.5"
     }
 }
