--- a/build-server/package.json
+++ b/build-server/package.json
@@ -12,6 +12,7 @@
     "@aws-sdk/client-s3": "^3.577.0",
     "dotenv": "^16.4.5",
     "ioredis": "^5.4.1",
+    "kafkajs": "^2.2.4",
     "mime-types": "^2.1.35"
   }
 }
